Moved RC channel selection for RSSI from px4io to RCInput. Added pitch roll yaw to FrSky telemetry.

--- a/src/drivers/rc_input/module.yaml
+++ b/src/drivers/rc_input/module.yaml
@@ -10,3 +10,48 @@ serial_config:
             Setting this to 'Disabled' will use a board-specific default port
             for RC input.
 
+parameters:
+    - group: Radio Calibration
+      definitions:
+        RC_RSSI_PWM_CHAN:
+            description:
+                short: PWM input channel providing RSSI
+                long: |
+                    Specify the range for RSSI input with RC_RSSI_PWM_MIN and RC_RSSI_PWM_MAX parameters.
+            type: int32
+            type: enum
+            values:
+                0: Disable
+                1: Channel 1
+                2: Channel 2
+                3: Channel 3
+                4: Channel 4
+                5: Channel 5
+                6: Channel 6
+                7: Channel 7
+                8: Channel 8
+                9: Channel 9
+                10: Channel 10
+                11: Channel 11
+                12: Channel 12
+                13: Channel 13
+                14: Channel 14
+                15: Channel 15
+                16: Channel 16
+                17: Channel 17
+                18: Channel 18
+            default: 0
+        RC_RSSI_PWM_MIN:
+            description:
+                short: Min input value for RSSI reading
+                long: |
+                    Specify the minimum input value for RSSI reading (valid only if RC_RSSI_PWM_CHAN > 0).
+            type: int32
+            default: 1000
+        RC_RSSI_PWM_MAX:
+            description:
+                short: Max input value for RSSI reading
+                long: |
+                    Specify the maximum input value for RSSI reading (valid only if RC_RSSI_PWM_CHAN > 0).
+            type: int32
+            default: 2000
